# nick-gable.github.io

./: index.html  index_old.html  style.css  style_old.css
code-samples/honors-thesis/: README.md
code-samples/honors-thesis/realtime_transit/: collection.py  crossing.py  graphs.py  pipeline.py  processing.py  util.py
code-samples/honors-thesis/realtime_transit/eval/: mt.py  results.py  window.py
code-samples/honors-thesis/realtime_transit/models/: end_route_mlp.py  simple_gnn.py  window_gnn.py
code-samples/jimm-ai/: .gitignore  README.md  advanced.py  analysis.py  environment.py  experiments.py  naive.py  plays.py  stats.py  tests.py
code-samples/jimm-ai/mcts/: Cargo.toml
code-samples/jimm-ai/mcts/src/: lib.rs  main.rs  mcts.rs
code-samples/mouse_guard/: guard.py
code-samples/registration-scanner/: README.md  parse.py
code-samples/wft/: README.md  index.html  recv.html  send.html  server.py
code-samples/work_scheduler/: README.md  index-small.html  index.html  run_server.sh  server.py  workscheduler.service
code-samples/work_scheduler/data/: tasks.json  todo.md
code-samples/work_scheduler/static/: script-small.js  script.js  style.css
code-samples/zbot/: README.md  addressSearch.js  index.html  zapi.js
