[package]
name = "mcts"
version = "0.1.0"
edition = "2021"

[lib]
name = "jimmymcts"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# rayon = "1.6.1"
pyo3 = { version = "0.17.3", features = ["extension-module"] }